cmake_minimum_required (VERSION 3.22)

project(UIAll LANGUAGES CXX)

set(CMAKE_INSTALL_MESSAGE ALWAYS)
set(TEST_INSTALL_DIR "${CMAKE_INSTALL_PREFIX}/test")
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

enable_testing()

add_subdirectory(Components)
add_subdirectory(Projects)